Insights mobile layout issues

--- a/resources/styles/common/insights.scss
+++ b/resources/styles/common/insights.scss
@@ -69,6 +69,11 @@
 
             &:nth-child(3) {
                 margin-top: 2.5rem;
+
+                @media screen and (max-width: 695px) {
+                    margin-top: 0;
+                    padding-top: 0;
+                }
             }
 
             .excerpt {
